Added bibtex references for some more papers... added Scaz's first-round comments

--- a/papers/AAAI/report.bib
+++ b/papers/AAAI/report.bib
@@ -198,6 +198,31 @@
  publisher = {AAAI Press},
 }
 
+﻿@article {Robonaut,
+   author = {Bluethmann, William and Ambrose, Robert and Diftler, Myron and Askew, Scott and Huber, Eric and Goza, Michael and Rehnmark, Fredrik and Lovchik, Chris and Magruder, Darby},
+   title = {Robonaut: A Robot Designed to Work with Humans in Space},
+   journal = {Autonomous Robots},
+   publisher = {Springer Netherlands},
+   issn = {0929-5593},
+   keyword = {Computer Science},
+   pages = {179-197},
+   volume = {14},
+   issue = {2},
+   url = {http://dx.doi.org/10.1023/A:1022231703061},
+   note = {10.1023/A:1022231703061},
+   year = {2003}
+}
+
+@InProceedings{TAMER2,
+ author="W.\ Bradley Knox and Peter Stone",
+ title="Understanding Human Teaching Modalities in Reinforcement
+Learning Environments: A Preliminary Report",
+ booktitle="IJCAI 2011 Workshop on Agents Learning Interactively from
+Human Teachers (ALIHT)",
+ month="July",
+ year="2011"
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 The following citations are used in the background section on ASL
 
